# foodgram-project-react

./: .dockerignore  .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: main.yml
backend/: .dockerignore  .flake8  Dockerfile  entrypoint.sh  env.example  manage.py
backend/config/: settings.py  urls.py
backend/core/: filters.py  mixins.py  utils.py
backend/data/: tags.json
backend/recipes/: admin.py  mixins.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/recipes/management/commands/: load_json.py  load_json_data.py
backend/recipes/migrations/: 0001_initial.py  0002_initial.py  0003_remove_ingredient_recipes_ing_name_164c6a_idx.py  0004_alter_shoppingcart_recipe_alter_shoppingcart_user.py  0005_alter_recipeingredient_ingredient_and_more.py  0006_alter_recipe_options.py
backend/users/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py  0002_alter_customuser_options.py
backend/users/serializers/: subscription_serializer.py  user_serializers.py
data/: tags.json
frontend/: .dockerignore  .gitignore
infra/: docker-compose.production.yml  docker-compose.yml  nginx.conf
tests/: test_00_user_registration.py
tests/fixtures/: fixture_user.py
