[tool.poetry]
name = "foodgram-project-react"
version = "0.1.0"
description = ""
authors = ["bulatgabdullin <112638878+ByJIaT@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.2"
djangorestframework = "^3.12.4"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.5"
drf-yasg = "^1.21.5"
pillow = "^10.0.0"
djoser = "^2.1.0"
python-dotenv = "^1.0.0"
reportlab = "^4.0.4"

[tool.poetry.group.dev.dependencies]
isort = "^4.3.21"
flake8 = "^3.7.9"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pytest-django = "^4.5.2"

[tool.pytest.ini_options]
pythonpath = ["backend"]
DJANGO_SETTINGS_MODULE = "config.settings"
addopts = "-vv -p no:cacheprovider --disable-warnings"
norecursedirs = [".*"]
testpaths = ["tests"]
python_files = ["test_*.py"]
disable_test_id_escaping_and_forfeit_all_rights_to_community_support = true

[tool.isort]
line_length = 79


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
